--- a/Swolemate/assets/css/firecircle.css
+++ b/Swolemate/assets/css/firecircle.css
@@ -3,21 +3,21 @@
 .fire .loader {
 }
 .fire .loader-bg {
-  border-color: #333;
+  border-color: #777;
   box-shadow: inset 2px 2px 20px 0 rgba(0,0,0,0.4);
 }
 .fire .text {
   font-size: 20px;
-  color: #ee4230 !important;
+  color: #1D9985 !important;
 }
 .fire .loader-spinner {
-  border-color: #ee4230;
+  border-color: #1D9985;
 }
 .fire.circle-loaded-75 .text {
-  color: #c6594e !important;
+  color: #1D9985 !important;
 }
 .fire.circle-loaded-75 .loader-spinner {
-  border-color: #c6594e;
+  border-color: #1D9985;
 }
 /*
 On dark bg -->
